- Fixed layout bug in IE where the company name did not show in the correct div.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -13,6 +13,7 @@ body{
 }
 
 #logo{
+	float: left;
 	display: inline;
 	height: 60px;
 	width: 60px;
@@ -20,7 +21,7 @@ body{
 }
 
 #company_name{
-	margin-right: 8px;
+	margin-right: 18px;
 	float: right;
 	color: white;
 	font-size: 1.1em;
